visibility of burger fixed

--- a/src/components/burger/style.css
+++ b/src/components/burger/style.css
@@ -1,7 +1,11 @@
-:host{
+:host([visible]){
 	display:block;
 	width: 3.2em;	
 	height:4em;
+}
+
+:host:not([visible]){
+	display: none;
 }
 
 .slide{
